ENHANCEMENT: Documentation update for creating a release