@@ -1,17 +1,16 @@
 # Geo-Addressing Helm Chart
 
-Built upon the [architecture](../../README.md#architecture), this chart comprises a parent Helm chart for the '
-regional-addressing' service and subsequent sub-charts for requirement-based, country-specific 'addressing-service' Helm
-charts.
+Built upon the [architecture](../../README.md#architecture), the geo-addressing helm chart offers flexibility to users, allowing them to configure and set up infrastructure according to their
+specific requirements. 
 
-This design offers flexibility to users, allowing them to configure and set up infrastructure according to their
-specific requirements. For example, if a user wishes to establish 'verify', 'geocode' and 'autocomplete' functionalities
+For example, if a user wishes to establish 'verify', 'geocode' and 'autocomplete' functionalities
 for the 'USA,' 'CAN,' 'GBR,' and 'DEU' countries exclusively, they can provide the necessary configurations during the
 Helm chart installation to deploy this specific type of infrastructure.
 
-Additionally, with the assistance of `regional-addressing`, users have the capability to deploy individual premium
-countries with a high volume of requests or loads. They can also create custom regions to group together countries with
-fewer requests or loads, allowing them to deploy a single addressing service for these regions.
+## Getting Started
+
+To get started with installation of helm chart, follow this [Quick Start Guide](../../docs/guides/eks/QuickStartEKS.md)
+
 
 ## Helm Values
 
@@ -67,9 +66,53 @@ provided by this chart:
 <hr>
 </details>
 
-## Getting Started
+## Environment Variables
 
-To get started with installation of helm chart, follow this [Quick Start Guide](../../docs/guides/eks/QuickStartEKS.md)
+> click the `▶` symbol to expand.
+
+NOTE: `*` indicates that we recommend not to modify those values during installation.
+
+<details>
+<summary><code>regional-addressing-service</code></summary>
+
+Refer to [this file](templates/_helpers.tpl) for overriding the environment variables for regional addressing service.
+
+| Parameter                              | Description                                                                                                                                                                                                                                                                                        | Default                                                                      |
+|----------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------|
+| `*ADDRESSING_BASE_URL`                 | The internal url of country-based verify/geocode service                                                                                                                                                                                                                                           | http://addressing-<region>.{{ .Release.Namespace }}.svc.cluster.local:8080   |
+| `LOOKUP_BASE_URL`                      | The internal url of country-based lookup service. If you prefer not to maintain separate infrastructure for the lookup service and would like all calls to be handled by the addressing service, you have the flexibility to modify this URL and point it to addressing service.                   | http://lookup-<region>.{{ .Release.Namespace }}.svc.cluster.local:8080       |
+| `AUTOCOMPLETE_BASE_URL`                | The internal url of country-based autocomplete service. If you prefer not to maintain separate infrastructure for the autocomplete service and would like all calls to be handled by the addressing service, you have the flexibility to modify this URL and point it to addressing service.       | http://autocomplete-<region>.{{ .Release.Namespace }}.svc.cluster.local:8080 |
+| `REVERSE_GEOCODE_BASE_URL`             | The internal url of country-based reverse-geocode service. If you prefer not to maintain separate infrastructure for the reverse-geocode service and would like all calls to be handled by the addressing service, you have the flexibility to modify this URL and point it to addressing service. | http://reverse-<region>.{{ .Release.Namespace }}.svc.cluster.local:8080      |
+| `OTEL_EXPORTER_OTLP_ENDPOINT`          | If tracing is enabled, this is the endpoint for tracer host.                                                                                                                                                                                                                                       | http://jaeger-collector.default.svc.cluster.local:4317                       |
+| `*SUPPORTED_COUNTRIES_GEOCODE`         | The countries that are supported for geocode functionality.                                                                                                                                                                                                                                        | usa,gbr,deu,aus,fra,can,mex,bra,arg,rus,ind,sgp,nzl,jpn,world                |
+| `*SUPPORTED_REGIONS_GEOCODE`           | The regions that are supported for geocode functionality.                                                                                                                                                                                                                                          | ""                                                                           |
+| `*SUPPORTED_COUNTRIES_VERIFY`          | The countries that are supported for verify.                                                                                                                                                                                                                                                       | usa,gbr,deu,aus,fra,can,mex,bra,arg,rus,ind,sgp,nzl,jpn,world                |
+| `*SUPPORTED_REGIONS_VERIFY`            | The regions that are supported for verify.                                                                                                                                                                                                                                                         | ""                                                                           |
+| `*SUPPORTED_COUNTRIES_LOOKUP`          | The countries that are supported for lookup.                                                                                                                                                                                                                                                       | usa,gbr,deu,aus,fra,can,mex,bra,arg,rus,ind,sgp,nzl,jpn,world                |
+| `*SUPPORTED_COUNTRIES_AUTOCOMPLETE`    | The countries that are supported for autocomplete.                                                                                                                                                                                                                                                 | usa,gbr,deu,aus,fra,can,mex,bra,arg,rus,ind,sgp,nzl,jpn,world                |
+| `*SUPPORTED_COUNTRIES_REVERSE_GEOCODE` | The regions that are supported for lookup.                                                                                                                                                                                                                                                         | ""                                                                           |
+| `*AUTH_ENABLED`                        | Flag to indicate whether authorization is enabled for the endpoints or not.                                                                                                                                                                                                                        | false                                                                        |
+| `*DIS_DEVELOPER_URL`                   | The url of the regional addressing service referred in the Swagger.                                                                                                                                                                                                                                | <current url of the deployed regional addressing service>                    |
+| `REF_DATA_API_KEY`                     | The key for which reference data endpoint is configured.                                                                                                                                                                                                                                           | helmRefDataKey                                                               |
+<hr>
+</details>
+
+<details>
+<summary><code>addressing-service</code></summary>
+
+Refer to the [deployment.yml](charts/addressing-svc/templates/deployment.yaml) of respective service for override variables for addressing-service.
+
+| Parameter                         | Description                                                                    | Default                                                                                                     |
+|-----------------------------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------|
+| `*DATA_PATH`                      | Default path of the installed reference data                                   | <referenced from configMap>                                                                                 |
+| `*ENABLED_ENDPOINTS`              | Value of the endpoints enabled. This is different for different sub-chart      | <depends on sub-charts>                                                                                     |
+| `*DATA_REGION`                    | The value of the referenced country or region.                                 | <depends on the provided country>                                                                           |
+| `BLOCK_DISPATCHER_POOL_SIZE`      | The no. of threads to control the parallel interactions with the internal SDK. | 4                                                                                                           |
+| `RESPONSE_DISPATCHER_MIN_THREADS` | The no. of non-blocking I/O threads                                            | 4                                                                                                           |
+| `*JAVA_TOOL_OPTIONS`              | The default Java tool opts for addressing service.                             | -Xverify:none -XX:TieredStopAtLevel=1 -javaagent:/opt/addressing-service/opentelemetry-javaagent-1.27.0.jar |
+| `OTEL_EXPORTER_OTLP_ENDPOINT`     | If tracing is enabled, this is the endpoint for tracer host.                   | http://jaeger-collector.default.svc.cluster.local:4317                                                      |
+<hr>
+</details>
 
 ## Memory Recommendations
 
@@ -248,9 +291,4 @@ curl --location 'https://[EXTERNAL-URL]/li/v1/oas/autocomplete' --header 'Conten
 }'
 ```
 
-## Next Sections
-- [Reference Data Installation](charts/reference-data-setup/README.md)
-- [Quickstart Guide for EKS](docs/guides/eks/QuickStartEKS.md)
-- [Trying out on Local Docker Desktop](docker-desktop/README.md)
-- [Metrics, Traces and Dashboards](docs/guides/MetricsAndTraces.md)
-- [FAQs](docs/faq/FAQs.md)
+[🔗 Return to `Table of Contents` 🔗](../../README.md#helm-charts)
